# IgDvp

./: user.py
PhotoShare/: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  sql_app.db
PhotoShare/alembic/: env.py
PhotoShare/alembic/versions/: 1639cb7222d4_init.py  1973fdcac770_init.py  bfc31e18014d_init.py
PhotoShare/migrations/: env.py
PhotoShare/migrations/versions/: 15c1fe9dd37e_init.py  1e09e6c9ecde_init.py  22edea24c727_init.py  3424e379ba13_init.py  426ea60aaa13_init.py  56f7ef696e79_init.py  62859610798e_init.py  766d1239e6fe_init.py  785bc2c0e667_init.py  8a18bcd7233d_init.py  9a0fa29f441e_init.py  b311e4019007_init.py  bf83f766d630_init.py  d009fa8f726f_init.py  d583d81e29d8_init.py  d6712301e7a2_init.py  df811b262a6f_init.py  e1be5ed26d89_init.py  e7f6573582a8_init.py  ea17326654e8_init.py
PhotoShare/postgres-data/: postmaster.pid
PhotoShare/postgres-data/global/: 1262  2671  2672  pg_control  pg_internal.init
PhotoShare/postgres-data/pg_stat/: global.stat
PhotoShare/postgres-data/pg_stat_tmp/: db_0.stat  db_13481.stat  global.stat
PhotoShare/src/: schemas.py
PhotoShare/src/conf/: config.py
PhotoShare/src/database/: db.py  models.py
PhotoShare/src/repository/: cloudinary.py  comments.py  logout.py  notes.py  photo.py  photos.py  quote.py  tags.py  user.py  users.py
PhotoShare/src/routes/: auth.py  cloudinary.py  comments.py  notes.py  photo.py  photos.py  tags.py  user.py  users.py
PhotoShare/tests/: test_route_auth.py  test_unit_repository_users.py
(+69 files in other folders)
