[tool.poetry]
name = "photoshare"
version = "0.1.0"
description = ""
authors = ["sergeyTurenko123 <sergej_petrovich_8484@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
sqlalchemy = "^2.0.32"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
psycopg2 = "^2.9.9"
alembic = "^1.13.2"
cloudinary = "^1.41.0"
redis = "^5.0.8"
pydantic = {extras = ["email"], version = "^2.8.2"}
passlib = "^1.7.4"
libgravatar = "^1.0.4"
pycryptodome = "^3.20.0"
python-jose = "^3.3.0"
pydantic-settings = "^2.4.0"
python-multipart = "^0.0.9"
fastapi-mail = "^1.4.1"
bcrypt = "^4.2.0"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
